docs(sweep): bring the ADR records to the ADR-085 standard
Motivation: none of the platform-scope ADRs carried frontmatter, and the sweep found dead
references and superseded statements that no amendment had ever annotated — ADR-024 alone
named the kernel as the refusing party after its own 2026-06-17 amendment moved that role
out of the kernel, and cited a `KERNEL_TRANSPORT` identifier ADR-038 ratified out of
existence.

Modification: frontmatter on every record; dead references repaired against source
(`CitadelRepository` is gone from the SPI, Core and Community modules — the live contract
is `FlowSnapshotStore` with the `JdbcFlowSnapshotStore` binding); superseded statements
annotated in place following each file's own existing convention, never rewritten;
unartifacted figures given an explicit figure state. Decision text is untouched: no
`## Amendments` section was written, and every change of substance is recorded for a
maintainer instead.

Result: frontmatter passes on the ADR set, including the required-section check. VERIFY
markers mark what the checkout could not settle.

Refs: ADR-085

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_0129netpKTjLahmdFDiaV4Qs